5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1837_2221.log
== TEST (2019-07-02 08:20:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet[0])):
	aprint(min(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:20:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	aprint(min(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:20:53) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	print(min(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:23:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	a = min(vet[i,:])
print(round(a/shape(vet)[0]),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:23:37) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	a = min(vet[i,:])
print(round(a/shape(vet)[0]),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:23:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	a = min(vet[i,:])
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print(min(vet[i,:]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print((sum(min(vet[i,:])))

-- ERROR:
File "XXXX", line 8
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:33) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print((sum(min(vet[i,:]))

-- ERROR:
File "XXXX", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print(sum(min(vet[i,:]))

-- ERROR:
File "XXXX", line 8
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:56) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print(sum(min(vet[i,:])))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:25:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 print(sum(min(vet[i,:])))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:25:31) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 a = sum(min(vet[i,:]))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:25:39) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	 a = sum(min(vet[i,:]))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:26:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

for i in range(shape(vet)[0]):
	  print(sum(min(vet[i,:])))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:29:29) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype = int)
for i in range(4):
	  total[i] = min(vet[i,:])

print(total[i])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:29:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype = int)
for i in range(4):
	  total[i] = min(vet[i,:])

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:30:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype = int)
for j in range(4):
	  total[j] = min(vet[j,:])

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:32:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype = int)
for i in range(4):
	  total[j] = min(vet[i,:])

for j in range(size(total)):
	print(round(sum(vet)/size(vet),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:33:26) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype = int)
for i in range(4):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	print(round(sum(vet)/size(vet),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:34:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype=int)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	print(round(sum(vet)/size(vet),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:35:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype=int)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:35:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(size(vet),dtype=int)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(size(vet),dtype=int)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))


for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))


for i in range(shape(vet)[0]):
	  total = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:36:40) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))


for i in range(shape(vet)[0]):
	   print(min(vet[i,:]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:37:34) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype=int)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:37:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:00) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(vet)):
	a = sum(vet)
	b = size(vet)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(vet)):
	a = sum(total)
	b = size(vet)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(vet)):
	a = sum(total)
	b = size(total)
print(a)
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:39:51) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(vet)):
	a = sum(total)
	b = size(total)
print(round(a/b),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:40:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(vet)):
	a = sum(total)
	b = size(total)
print(a/b)
print(round(a/b),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:40:46) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = size(total)
print(a/b)
print(round(a/b),2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:41:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = size(total)
print(a/b)
print(round((a/b),2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:42:41) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = size(total)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:46:18) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = shape(vet)[0]
print(round((a/b),2)




-- ERROR:
File "XXXX", line 17
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:46:21) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = shape(vet)[0]
print(round((a/b),2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:46:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

vet = array(eval(input("insira:")))

total = zeros(4,dtype)
for i in range(shape(vet)[0]):
	  total[i] = min(vet[i,:])

for j in range(size(total)):
	a = sum(total)
	b = shape(vet)[0]
print(round((a/b),2))




-- EXECUTION TIME:
1.19932
-- TEST CASE 1:
---- input:
[[8.9,7.3,5.2,7.7],[10.0,5.6,8.8,9.5],[3.2,5.6,7.8,8.7]]
---- correct output:
4.67
---- user output:
4.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
